<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="eSystemCommand" Id="{18a37986-109c-429c-a874-2d279af34138}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE eSystemCommand :
(
	KEINE		:= 0,
	AUSCHALTEN 	:= 1,
	EINSCHALTEN := 2,
	STOPPEN		:= 3,
	RESETTEN	:= 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>